[package]
name = "chatroom"
version = "0.1.0"
edition = "2021"

[dependencies]
async-recursion = "1.0.0"
axum = { version = "0.4.4", features = ["default", "ws"] }
axum-server = "0.3.3"
chrono = "0.4"
dotenv = "0.15.0"
futures = "0.3.19"
hyper = { version = "0.14.16", features = ["full"] }
log = "0.4"
log4rs = "1.0.0"
rand = "0.8.4"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { path = "../shared"}
sqlx = { version = "0.5.11", features = ["postgres", "all-types", "runtime-tokio-rustls"] }
tokio = { version = "1.15.0", features = ["full"] }
tower = "0.4.11"