[package]
name = "discovery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.0"
axum = { version = "0.4.4", features = ["default"] }
axum-debug = "0.3.2"
axum-server = "0.3.3"
chrono = "0.4"
dotenv = "0.15.0"
futures = "0.3.19"
log = "0.4"
log4rs = "1.0.0"
rand = "0.8.4"
scylla = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { path = "../shared"}
tokio = { version = "1.15.0", features = ["full"] }
url = "2.2.2"