[package]
name = "searchbuddy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.4.4"
axum-server = "0.3.3"
env_logger = "0.9"
futures = "0.3.19"
hyper = { version = "0.14.16", features = ["full"] }
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { path = "../shared"}
tokio = { version = "1.15.0", features = ["full"] }
tower = "0.4.11"
url = "2.2.2"