[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
log = "0.4"
log4rs = "1.0.0"
ring = "0.16.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

